<resources>
    <string name="app_name">SimpleMenuExample</string>

    <!--    title-->
    <string name="title_recycler_view">RecyclerView</string>
    <string name="title_snackbar_view">SnackBarView</string>
    <string name="title_user_add_view">Dialog</string>
    <string name="title_bottom_sheet_dialog">BottomSheetDialog</string>
    <string name="title_view_pager">ViewPager2</string>

    <!--    btn-->
    <string name="btn_user_add_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_go_settings">go setting..</string>
    <string name="btn_get_api">get Api</string>

    <!--   dialog-->
    <string name="text_permission">Please set permissions in settings.</string>
    <string name="text_user_name">Seunggi Hong</string>
    <string name="text_user_email">tmdrl1026@naver.com</string>
    <string name="text_user_phone">821044826574</string>
    <string name="text_user_content">I love Android</string>

    <!--    hint-->
    <string name="hint_user_add_name">Please enter your name.</string>
    <string name="hint_user_add_email">Please enter your email.</string>
    <string name="hint_user_add_phone">Please enter your phone number.</string>
    <string name="hint_user_add_content">Please enter your self-introduction.</string>
    <string name="hint_user_add_no_data">This is a required entry.</string>

    <!--    toast-->
    <string name="toast_user_delete">User has been deleted :(</string>
    <string name="toast_user_add_success">User has been added!!!</string>
    <string name="toast_user_add_no_data">There are unfilled items..</string>
    <string name="toast_user_add_no_pic">Unable to load photos..</string>

    <!--    snack-->
    <string name="snack_start_get_api">Start server connection..</string>
    <string name="snack_failed_get_api">Server connection failed..</string>

    <!--    page-->
    <string name="page_user_title">User</string>
    <string name="page_user_detail_title">User detail</string>
</resources>