<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        >

        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_pic"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="30dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:civ_border_width="0.5dp"
                app:civ_border_color="#ff000000"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_name"
                    android:textSize="25sp"
                    />
                <TextView
                    android:id="@+id/tv_user_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_email"
                    android:textSize="13sp"
                    />
                <TextView
                    android:id="@+id/tv_user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_phone"
                    />
                <TextView
                    android:id="@+id/tv_user_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_content"
                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_user_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@drawable/ic_baseline_close_24"
            />

    </androidx.cardview.widget.CardView>

</layout>
